# nProzubi

./: .gitmodules  configure.ac
src/: CaseEdit.c  CaseEdit.h  CasesList.c  CasesList.h  InfoPannel.c  InfoPannel.h  MainScreen.c  MainScreen.h  Makefile  Makefile.am  Makefile.in  NomenklaruraList.c  NomenklaruraList.h  PatientEdit.c  PatientEdit.h  PatientsList.c  PatientsList.h  PlanLecheniya.c  PlanLecheniya.h  PlanLecheniyaEdit.c  PlanLecheniyaEdit.h  PriceList.c  PriceList.h  TextUTF8Handler.c  TextUTF8Handler.h  Xray.c  Xray.h  colors.h  delegate.h  error.c  error.h  image2ascii.h  input.c  input.h  main.c  quit.h  switcher.h
